fix: fix get court by location
